[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["no-std"]
description = "libm in pure Rust"
documentation = "https://docs.rs/libm"
keywords = ["libm", "math"]
license = "MIT OR Apache-2.0"
name = "libm"
repository = "https://github.com/rust-lang-nursery/libm"
version = "0.2.0"
edition = "2018"

[features]
default = []

# If you enable this feature then the crate will assume that you're building
# using a Nightly compiler. This allows us to take advantage of unstable
# features, some of which might never become stable (eg: calling some of the
# LLVM intrinsics).
unstable = []

# Generate tests which are random inputs and the outputs are calculated with
# musl libc.
musl-reference-tests = ['rand']

# Used checked array indexing instead of unchecked array indexing in this
# library.
checked = []

[workspace]
members = [
  "crates/compiler-builtins-smoke-test",
  "crates/libm-bench",
]

[dev-dependencies]
no-panic = "0.1.11"

[build-dependencies]
rand = { version = "0.6.5", optional = true }
