[package]
name = "libm-analyze"
version = "0.1.0"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
test = false

[dependencies]
syn = { version = "0.15", features = ["full", "extra-traits"] }
quote = "0.6"
walkdir = "2.2.8"
proc-macro2 = "0.4"

[features]
default = ["analyze"]
analyze = []