[package]
name = "libm-bench"
version = "0.1.0"
authors = ["Gonzalo Brito Gadeschi <gonzalobg88@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
libm = { path = "../libm", default-features = false }
libm-analyze = { path = "../libm-analyze", default-features = false }
libm-test = { path = "../libm-test", default-features = false }
rand = "0.6.5"

[features]
default = []
stable = [ "libm/stable" ]
