[package]
name = "relibm"
version = "0.1.0"
authors = ["augustin <cheron.augustin@gmail.com>"]
description = "Expose rust libm functions in a c abi compatible library. This is highly experimental. This crate is for test purpose only."
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
libm = { path = "../.." }
libc = {version="0.2", default-features=false}
