[package]
name = "libm-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

# Generate tests which are random inputs and the outputs are calculated with
# musl libc.
musl-bitwise-tests = ["rand"]

[dependencies]
libm = { path = "../.." }
libm-macros = { path = "../libm-macros" }
paste = "1.0.15"

# We can't build musl on MSVC or wasm
[target.'cfg(not(any(target_env = "msvc", target_family = "wasm", target_feature = "thumb-mode")))'.dependencies]
musl-math-sys = { path = "../musl-math-sys" }

[dev-dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"

[build-dependencies]
rand = { version = "0.8.5", optional = true }
