[package]
name = "libm-test"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []

# Generate tests which are random inputs and the outputs are calculated with
# musl libc.
test-multiprecision = ["dep:az", "dep:rug"]

# Build our own musl for testing and benchmarks
build-musl = ["dep:musl-math-sys"]

# Enable report generation without bringing in more dependencies by default
benchmarking-reports = ["criterion/plotters", "criterion/html_reports"]

# Run with a reduced set of benchmarks, such as for CI
short-benchmarks = []

[dependencies]
anyhow = "1.0.90"
az = { version = "1.2.1", optional = true }
indicatif = { version = "0.17.9", default-features = false }
libm = { path = "../..", features = ["unstable-test-support"] }
libm-macros = { path = "../libm-macros" }
musl-math-sys = { path = "../musl-math-sys", optional = true }
paste = "1.0.15"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
rug = { version = "1.26.1", optional = true, default-features = false, features = ["float", "std"] }

[target.'cfg(target_family = "wasm")'.dependencies]
# Enable randomness on WASM
getrandom = { version = "0.2", features = ["js"] }

[build-dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
# FIXME: use the crates.io version once it supports runtime skipping of tests
libtest-mimic = { git = "https://github.com/tgross35/libtest-mimic.git", rev = "4c8413b493e1b499bb941d2ced1f4c3d8462f53c" }

[[bench]]
name = "random"
harness = false

[[test]]
# No harness so that we can skip tests at runtime based on env. Prefixed with
# `z` so these tests get run last.
name = "z_extensive"
harness = false
